--- a/app/src/main/res/layout/restaurant_list_item_drag.xml
+++ b/app/src/main/res/layout/restaurant_list_item_drag.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/restaurantNameTextView"
             android:text="Restaurant Name"
-            android:textSize="20dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"/>
 
@@ -58,8 +58,8 @@
             android:textStyle="italic"/>
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
