--- a/app/src/main/res/layout/activity_saved_restaurant_list.xml
+++ b/app/src/main/res/layout/activity_saved_restaurant_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentRestaurantList"
-        android:name="com.epicodus.myrestaurants.ui.RestaurantListFragment"
+        android:name="com.epicodus.myrestaurants.ui.SavedRestaurantListFragment"
         tools:layout="@layout/fragment_restaurant_list"/>
 
 </RelativeLayout>
